--- a/package.json
+++ b/package.json
@@ -1,15 +1,53 @@
 {
-  "name": "web-tracker",
+  "name": "spotted",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "start": "concurrently \"nx serve spotted-frontend\" \"nx serve spotted-backend\""
   },
   "private": true,
-  "dependencies": {
-  },
   "devDependencies": {
-    "nx": "15.8.9",
+    "@nrwl/cypress": "15.8.9",
+    "@nrwl/eslint-plugin-nx": "15.8.9",
+    "@nrwl/express": "^15.8.9",
+    "@nrwl/jest": "^15.8.9",
+    "@nrwl/js": "15.8.9",
+    "@nrwl/linter": "15.8.9",
+    "@nrwl/node": "15.8.9",
+    "@nrwl/webpack": "15.8.9",
     "@nrwl/workspace": "15.8.9",
-    "prettier": "^2.6.2"
+    "@nxext/solid": "^15.7.0",
+    "@nxext/vite": "^15.1.0",
+    "@types/express": "4.17.13",
+    "@types/jest": "^29.4.0",
+    "@types/node": "~18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "concurrently": "^7.6.0",
+    "cypress": "^12.2.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-solid": "0.9.4",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "nx": "15.8.9",
+    "prettier": "^2.6.2",
+    "solid-jest": "^0.2.0",
+    "solid-js": "^1.6.10",
+    "solid-testing-library": "^0.5.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "~4.9.5",
+    "vite": "^3.1.8",
+    "vite-plugin-solid": "2.5.0"
+  },
+  "dependencies": {
+    "axios": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "puppeteer": "^19.8.0",
+    "tslib": "^2.3.0"
   }
 }
