add tailwindcss and aws cognito support

--- a/apps/spotted-frontend/project.json
+++ b/apps/spotted-frontend/project.json
@@ -10,6 +10,7 @@
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/spotted-frontend",
+        "postcssConfig": "apps/spotted-frontend/postcss.config.js",
         "frameworkConfigFile": "@nxext/solid/plugins/vite"
       },
       "configurations": {
