--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@nrwl/workspace": "15.8.9",
     "@nxext/solid": "^15.7.0",
     "@nxext/vite": "^15.1.0",
+    "@types/bull": "^4.10.0",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/puppeteer": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "concurrently": "^7.6.0",
@@ -44,10 +46,17 @@
     "vite-plugin-solid": "2.5.0"
   },
   "dependencies": {
-    "axios": "^1.0.0",
+    "@solidjs/router": "^0.8.2",
+    "autoprefixer": "^10.4.14",
+    "aws-sdk": "^2.1359.0",
+    "axios": "^1.3.5",
+    "bull": "^4.10.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "postcss": "^8.4.21",
     "puppeteer": "^19.8.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tailwindcss": "^3.3.1",
     "tslib": "^2.3.0"
   }
 }
