--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@nrwl/workspace": "15.8.9",
     "@nxext/solid": "^15.7.0",
     "@nxext/vite": "^15.1.0",
-    "@types/bull": "^4.10.0",
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@types/puppeteer": "^7.0.4",
@@ -40,19 +39,20 @@
     "solid-js": "^1.6.10",
     "solid-testing-library": "^0.5.1",
     "ts-jest": "^29.0.5",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.9.5",
     "vite": "^3.1.8",
     "vite-plugin-solid": "2.5.0"
   },
   "dependencies": {
+    "@bull-board/express": "^5.0.0",
     "@solidjs/router": "^0.8.2",
     "autoprefixer": "^10.4.14",
     "aws-sdk": "^2.1359.0",
     "axios": "^1.3.5",
-    "bull": "^4.10.4",
+    "bullmq": "^3.10.4",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "postcss": "^8.4.21",
     "puppeteer": "^19.8.0",
     "rollup-plugin-postcss": "^4.0.2",
